--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,40 +1,30 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
 <ion-content>
+
   <ion-grid>
-
     <ion-row class="margin">
-      <ion-col size="2">
-
-      </ion-col>
+      <ion-col size="2"></ion-col>
       <ion-col size="8">
         <h1 class="heading">Welcome Back!</h1>
       </ion-col>
-      
-      <ion-col size="2">
-
-      </ion-col>
+      <ion-col size="2"></ion-col>
     </ion-row>
     <ion-row class="margin">
       <ion-col size=3></ion-col>
       <ion-col size="6">
-      
       <img src="../../../assets/icon/favicon.png">
-    
-    </ion-col>
+      </ion-col>
       <ion-col size="3"></ion-col>
     </ion-row>
 
-
-
-
-
+<!-- Form to show error -->
     <form [formGroup]="loginForm" (ngSubmit)="submit()">
       <ion-row class="margin">
         <ion-col size="1"></ion-col>
         <ion-col size="10">
       <ion-list>
         <ion-item>
-          
+          <!-- Email input -->
           <ion-input formControlName="email" type="Email" placeholder="Email ID"></ion-input>
         </ion-item>
         <div *ngFor="let error of errorMessages.email">
@@ -43,9 +33,9 @@
           </ng-container>
         </div>
       </ion-list>
-    </ion-col>
-    <ion-col size="1"></ion-col>
-    </ion-row>
+        </ion-col>
+        <ion-col size="1"></ion-col>
+      </ion-row>
       
       
 
@@ -54,7 +44,7 @@
       <ion-col size="10">
       <ion-list>
         <ion-item>
-          
+          <!-- Password input-->
           <ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
         </ion-item>
         <div *ngFor="let error of errorMessages.password">
@@ -62,16 +52,17 @@
             <small class="error-message">{{error.message}}</small>
           </ng-container>
         </div>
-        </ion-list>
+      </ion-list>
       </ion-col>
       <ion-col size="1"></ion-col>
       </ion-row>
 
 
-          <ion-row class="margin">
-            <ion-col size="4"></ion-col>
-            <ion-col size="4">
-          <ion-button [disabled]="!loginForm.valid" type="submit" fill="solid" expand="block" color="dark" routerLink="/tabs/tab1" routerDirection="root">Login</ion-button>
+      <ion-row class="margin">
+        <ion-col size="4"></ion-col>
+        <!-- Login button-->
+        <ion-col size="4">
+          <ion-button [disabled]="!loginForm.valid" type="submit" fill="solid" expand="block" color="dark" routerLink="/tabs/tab1" routerDirection="forward">Login</ion-button>
         </ion-col>
         <ion-col size="4"></ion-col>
         </ion-row>
@@ -79,9 +70,8 @@
 
 
     <ion-row class="signup">
-      <ion-col size="3">
-
-      </ion-col>
+      <ion-col size="3"></ion-col>
+      <!-- new user signin-->
       <ion-col size="6">
         <div class="lower-content">
           <h6>New user ?<span style="color: var(--ion-color-primary);" (click)="signup()"> Signup</span></h6>
