[IMP] Profile Page : Responsiveness is updated

--- a/src/app/pages/profile/tab2.page.html
+++ b/src/app/pages/profile/tab2.page.html
@@ -51,13 +51,13 @@
       </ion-col>
     </ion-row>
 
-    <!-- Post Heaing -->
+    <!-- Post Heading -->
     <ion-row class="alignCenter topSpacing">
       <ion-label id="postHeading">Posts</ion-label>
     </ion-row>
 
     <!-- Post -->
-    <ion-row class=" noPaddingMargin">
+    <ion-row class=" noPaddingMargin largeDeviceAlignment">
       <ion-card>
         <!-- Post Header -->
         <ion-card-header>
@@ -96,7 +96,7 @@
               <ion-badge class="countStyle noPaddingMargin">20</ion-badge>
             <!-- CommentIcon with count -->
               <ion-icon class="iconResize" id="comment" src="assets/icon/commentIcon.svg"></ion-icon>
-              <ion-badge class="countStyle noPaddingMargin" [(ngModel)]="count">{{count}}</ion-badge>
+              <ion-badge class="countStyle noPaddingMargin" >20</ion-badge>
           </ion-row>
         <!-- Post Footer Ends -->
       </ion-card>
