[IMP] LOGIN & SIGNUP: Conditional Routing, Create account & Login implemented

--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -49,9 +49,9 @@
         <ion-button
           *ngIf="fromPage == null"
           color="dark"
-          (click)="updateCategory()"
+          (click)="createAccount()"
           [disabled]="selectedCategories.length === 0"
-          >Next</ion-button
+          >Sign up</ion-button
         >
       </ion-col>
     </ion-row>
