--- a/src/app/pages/profile/tab2.page.html
+++ b/src/app/pages/profile/tab2.page.html
@@ -82,7 +82,7 @@
     </ion-row>
 
     <!-- Post -->
-    <ion-row class=" noPaddingMargin largeDeviceAlignment">
+    <ion-row class="noPaddingMargin largeDeviceAlignment">
       <ion-card>
         <!-- Post Header -->
         <ion-card-header>
@@ -97,9 +97,11 @@
                 <h4 class="noPaddingMargin">Poorvasha</h4>
               </ion-row>
               <ion-row id="postCategoryDateDetails" class="paddingLeft">
-                <h4 class="noPaddingMargin">Science
-                  <hr class="noPaddingMargin">
-                  <span>20th Jul,2020</span></h4>
+                <h4 class="noPaddingMargin">
+                  Science
+                  <hr class="noPaddingMargin" />
+                  <span>20th Jul,2020</span>
+                </h4>
               </ion-row>
             </ion-col>
           </ion-row>
@@ -118,14 +120,22 @@
         <!-- Post Content Ends -->
 
         <!-- Post Footer -->
-          <ion-row class="noPaddingMargin bottomPadding">
-            <!-- StarIcon with count -->
-              <ion-icon class="iconResize" id="star" src="assets/icon/unstarIcon.svg"></ion-icon>
-              <ion-badge class="countStyle noPaddingMargin">20</ion-badge>
-            <!-- CommentIcon with count -->
-              <ion-icon class="iconResize" id="comment" src="assets/icon/commentIcon.svg"></ion-icon>
-              <ion-badge class="countStyle noPaddingMargin" >20</ion-badge>
-          </ion-row>
+        <ion-row class="noPaddingMargin bottomPadding">
+          <!-- StarIcon with count -->
+          <ion-icon
+            class="iconResize"
+            id="star"
+            src="assets/icon/unstarIcon.svg"
+          ></ion-icon>
+          <ion-badge class="countStyle noPaddingMargin">20</ion-badge>
+          <!-- CommentIcon with count -->
+          <ion-icon
+            class="iconResize"
+            id="comment"
+            src="assets/icon/commentIcon.svg"
+          ></ion-icon>
+          <ion-badge class="countStyle noPaddingMargin">20</ion-badge>
+        </ion-row>
         <!-- Post Footer Ends -->
       </ion-card>
     </ion-row>
