--- a/src/app/pages/home/tab1.page.scss
+++ b/src/app/pages/home/tab1.page.scss
@@ -2,7 +2,7 @@
                         Common
 ==========================================================*/
 ion-grid{
-    margin : 10px;
+    margin : 5px 0px;
 }
 .large-text-color{
     color: var(--ion-color-dark);
@@ -28,10 +28,13 @@ ion-grid{
 }
 // setting icon
 #setting-icon{
-    zoom: 1.4;
+    zoom: 1.7;
     display: flex;
     justify-content: flex-end;
-    padding: 7px 7px;
+    margin-top: 10px;
+}
+#setting-padd{
+    padding: 5px 5px 3px 5px;
 }
 
 /*=========================================================
@@ -56,3 +59,282 @@ ion-grid{
     color: #6F6F6F;
 }
 
+/*=========================================================
+                        Feeds Found
+==========================================================*/
+
+ion-card{
+    width: 100%;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+    //box-shadow: none !important;
+    background-color: var(--ion-color-white);
+
+}
+//Avatar
+#postAvatar{
+    border: 1px solid var(--ion-color-primary);
+    width: 60px;
+    height: 60px;
+
+}
+//userDetails, category and date
+#postUserNameAlignment h4{
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 34px;
+    color:var(--ion-color-dark);
+}
+#postCategoryDateDetails{
+    padding-bottom: 16px !important;
+}
+#postCategoryDateDetails h4{
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+    color:var(--ion-color-warning);
+}
+#postCategoryDateDetails h4 span{
+    padding-left: 10px;
+    font-weight: normal;
+} 
+hr{
+    height: 8.5px; 
+    display: inline-block; 
+    border: 1px solid var(--ion-color-secondary);
+    margin-left: 6px !important;
+}
+.paddingLeft{
+    padding-left: 22px;
+}
+//Post content
+#postContent{
+    font-family: 'Quicksand';
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    color:var(--ion-color-dark);
+}
+//Image responsiveness
+.img-responisve{
+    width: 100%;
+    // height: 45%;
+    border-radius: 3px;
+    padding-bottom: 10px;
+}
+// post footer - star and comment
+.countStyle{
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    background-color: var(--ion-color-white);
+    padding-top: 10px !important;
+    color:var(--ion-color-primary);
+}
+.iconResize{
+    zoom: 1.6;
+}
+#star{
+    padding-left: 74% !important; 
+}
+#comment {
+    padding-left: 3% !important;
+}
+.bottomPadding{
+    padding-bottom: 10px !important;
+}
+.noPaddingMargin{
+    padding: 0;
+    margin: 0;
+}
+
+
+
+/*==================================================
+                   Responsiveness
+==================================================*/
+/* large Devices (Desktops & Laptops) */
+@media(min-width: 1200px) and (max-width: 1299px){
+
+    /*Post Card*/ 
+    ion-card{
+        width: 90%;
+    }
+
+    //Avatar
+    #postAvatar{
+        width: 80px;
+        height: 80px;
+
+    }
+    .paddingLeft{
+        padding-left: 0 !important;
+    }
+    //userDetails, category and date
+    #postUserNameAlignment h4{
+        font-size: 16px;
+        line-height: 36px;
+    }
+    #postCategoryDateDetails{
+        padding-bottom: 18px !important;
+    }
+    #postCategoryDateDetails h4{
+        font-size: 15px;
+    }
+    //Post content
+    #postContent{
+        font-size: 16px;
+    }
+    .largeDeviceAlignment{
+        display: flex;
+        justify-content: center;
+    }
+    // post footer - star and comment
+    .countStyle{
+        font-size: 14px;
+        padding-top: 12px !important;
+    }
+    .iconResize{
+        zoom: 1.8;
+    }
+    #star{
+        padding-left: 88% !important; 
+    }
+}
+
+/* Medium Devices (Landscape Tablets & Medium Desktops) */
+@media(min-width: 992px) and (max-width: 1199px){
+
+    /*Post Card*/ 
+    ion-card{
+        width: 90%;
+    }
+
+    //Avatar
+    #postAvatar{
+        width: 80px;
+        height: 80px;
+
+    }
+    .paddingLeft{
+        padding-left: 0 !important;
+    }
+    //userDetails, category and date
+    #postUserNameAlignment h4{
+        font-size: 16px;
+        line-height: 36px;
+    }
+    #postCategoryDateDetails{
+        padding-bottom: 18px !important;
+    }
+    #postCategoryDateDetails h4{
+        font-size: 15px;
+    }
+    //Post content
+    #postContent{
+        font-size: 16px;
+    }
+    .largeDeviceAlignment{
+        display: flex;
+        justify-content: center;
+    }
+    // post footer - star and comment
+    .countStyle{
+        font-size: 14px;
+        padding-top: 12px !important;
+    }
+    .iconResize{
+        zoom: 1.8;
+    }
+    #star{
+        padding-left: 85% !important; 
+    }
+}
+/* Small Devices (Portrait Tablets & Small Desktops) */
+@media(min-width: 768px) and (max-width: 991px){
+
+    /*Post Card*/ 
+    ion-card{
+        width: 90%;
+    }
+
+    //Avatar
+    #postAvatar{
+        width: 70px;
+        height: 70px;
+}
+    .paddingLeft{
+        padding-left: 0 !important;
+    }
+    //userDetails, category and date
+    #postUserNameAlignment h4{
+        font-size: 16px;
+        line-height: 36px;
+    }
+    #postCategoryDateDetails{
+        padding-bottom: 18px !important;
+    }
+    #postCategoryDateDetails h4{
+        font-size: 15px;
+    }
+    //Post content
+    #postContent{
+        font-size: 16px;
+    }
+    .largeDeviceAlignment{
+        display: flex;
+        justify-content: center;
+    }
+    // post footer - star and comment
+    .countStyle{
+        font-size: 14px;
+        padding-top: 12px !important;
+    }
+    .iconResize{
+        zoom: 1.8;
+    }
+    #star{
+        padding-left: 84% !important; 
+    }
+}
+/* Extra Small Devices (Portrait Tablets & Landscape Phones) */
+@media(max-width: 768px){
+    #star{
+        padding-left: 79% !important; 
+    }
+
+}
+/* Extra Small Devices (Portrait Phones & Smaller Devices) */
+@media(max-width:480px){
+    // post footer - star and comment
+    #star{
+        padding-left: 73% !important; 
+    }
+}
+/* Extra Small Devices (Portrait Phones & Smaller Devices) */
+@media(max-width:360px){
+    //Avatar
+    #postAvatar{
+        width: 55px;
+        height:55px;
+
+    }
+    // post footer - star and comment
+    #star{
+        padding-left: 72% !important; 
+    }
+}
+/* Extra Small Devices (Portrait Phones & Smaller Devices) */
+@media(max-width:320px){
+    //Avatar
+    #postAvatar{
+        width: 50px;
+        height:50px;
+
+    }
+    // post footer - star and comment
+    #star{
+        padding-left: 68% !important; 
+    }
+}
