[IMP] FEED & SETTINGS: Settings modal linked and Logout call wired

--- a/src/app/pages/home/tab1.page.html
+++ b/src/app/pages/home/tab1.page.html
@@ -22,7 +22,7 @@
             <div class="ion-activatable ripple">
                 <ion-ripple-effect type = "unbounded"></ion-ripple-effect>
                 <!-- setting icon -->
-                <ion-icon src="../../../assets/icon/settings-icon.svg" id="setting-padd" (click)= "openSettingPage()"></ion-icon>
+                <ion-icon src="../../../assets/icon/settings-icon.svg" id="setting-padd" (click)= "openSettingModal()"></ion-icon>
             </div>   
           </div>
         </ion-col>
