[IMP] Profile Page : Responsive distance b/w each post card is fixed

--- a/src/app/pages/profile/tab2.page.scss
+++ b/src/app/pages/profile/tab2.page.scss
@@ -114,6 +114,9 @@ ion-card{
     background-color: var(--ion-color-white);
 
 }
+.largeDeviceAlignment{
+    margin-bottom: -5px;
+}
 //Avatar
 #postAvatar{
     border: 1px solid var(--ion-color-primary);
