[IMP] SETTINGS: Change Password wired

--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -37,7 +37,10 @@
       <!-- change password -->
       <ion-col>
         <div id="button-alignCenter" class="borderLine">
-          <ion-button color="dark" style="color: white;"
+          <ion-button
+            color="dark"
+            style="color: white;"
+            (click)="presentPasswordChange()"
             >Change password</ion-button
           >
         </div>
