--- a/src/app/pages/password-change/password-change.page.html
+++ b/src/app/pages/password-change/password-change.page.html
@@ -2,33 +2,49 @@
 <ion-grid class="grid-top-distance">
   <!-- Old password -->
   <ion-row>
-      <ion-item>
-          <ion-input placeholder="Old Password"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-input
+        [(ngModel)]="passwords.oldPassword"
+        placeholder="Old Password"
+        type="password"
+      ></ion-input>
+    </ion-item>
   </ion-row>
 
   <!-- New password -->
   <ion-row>
-      <ion-item>
-          <ion-input placeholder="New Password"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-input
+        [(ngModel)]="passwords.newPassword"
+        placeholder="New Password"
+        type="password"
+      ></ion-input>
+    </ion-item>
   </ion-row>
 
   <!-- Confirm password -->
   <ion-row>
-      <ion-item>
-          <ion-input placeholder="Confirm Password"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-input
+        [(ngModel)]="passwords.confirmPassword"
+        placeholder="Confirm Password"
+        type="password"
+      ></ion-input>
+    </ion-item>
   </ion-row>
 
   <!-- Cancel and change password -->
   <ion-row>
-      <ion-col col-6 >
-          <ion-button color="danger" class="cancel-button password-button" >Cancel</ion-button>
-        </ion-col>
-        
-        <ion-col col-6 >
-            <ion-button color="success" class="change-button password-button" >Change</ion-button>    
-        </ion-col>
+    <ion-col col-6>
+      <ion-button color="danger" class="cancel-button password-button" (click)="dismissPopover()"
+        >Cancel</ion-button
+      >
+    </ion-col>
+
+    <ion-col col-6>
+      <ion-button color="success" class="change-button password-button" (click)="changePassword()"
+        >Change</ion-button
+      >
+    </ion-col>
   </ion-row>
 </ion-grid>
