--- a/src/app/pages/home/tab1.page.html
+++ b/src/app/pages/home/tab1.page.html
@@ -3,7 +3,7 @@
 <ion-content [fullscreen]="true">
 
   <!-- HEADER START -->
-  <ion-grid>
+  <ion-grid id="header-grid">
       <!-- row-01 -->
       <ion-row>
         <!-- col-01 -->
@@ -25,7 +25,7 @@
             <div class="ion-activatable ripple">
                 <ion-ripple-effect type = "unbounded"></ion-ripple-effect>
                 <!-- setting icon -->
-                <ion-icon src="../../../assets/icon/settings-icon.svg" id="setting-padd" (click)= "openSettingPage()"></ion-icon>
+                <ion-icon src="../../../assets/icon/settings-icon.svg" id="setting-padd"></ion-icon>
             </div>   
           </div>
         </ion-col>
