--- a/src/app/pages/settings/settings.page.scss
+++ b/src/app/pages/settings/settings.page.scss
@@ -6,7 +6,7 @@
     color: var(--ion-color-dark);
 }
 ion-grid{
-    margin : 2px 30px;
+    margin : 2px 20px;
 }
 // ripple effect for icon
 .ripple{
@@ -27,7 +27,9 @@ ion-grid{
 #cancel-icon{
     display: flex;
     justify-content: flex-end;
-    margin-top: 20px;
+    zoom: 1.2;
+    margin-top: 13px;
+    margin-left: 30px !important;
 }
 ion-icon{
     padding: 10px 10px 5px 10px;    
